<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PicPoster</string>
    <string name="action_settings">Settings</string>
    
    <string name="no_pic_text">I have nothing to say!</string>
    
    <string name="search_posts_edit_text_hint">Enter search....</string>
    <string name="search_button_text">Go!</string>

    <string name="add_pic_image_description">Take a picture</string>
    <string name="add_pic_edit_text_hint">Enter text....</string>
    <string name="add_pic_button_text">Post</string>
    
    <string name="pic_image_description">A picture</string>
    
</resources>
