<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PicPosterActivity" >
    
    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        
        <EditText
            android:id="@+id/search_posts_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_posts_edit_text_hint" />
        
        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/search_button_text" 
            android:onClick="searchPosts"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/add_pic_image_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:src="@drawable/camera"
            android:contentDescription="@string/add_pic_image_description"
            android:onClick="obtainPicture" />

        <EditText
            android:id="@+id/add_pic_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_pic_edit_text_hint" />

        <Button
            android:id="@+id/add_pic_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/add_pic_button_text"
            android:onClick="pushPicture" />
        
    </LinearLayout>
    
    <ListView
        android:id="@+id/pic_post_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/add_layout"
        android:layout_below="@+id/options_layout" />

</RelativeLayout>